<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ndc_desc" />

        <EditText
            android:theme="@style/EditTextForm"
            android:id="@+id/edit_ndc_weight"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:maxLength="3" />

        <EditText
            android:theme="@style/EditTextForm"
            android:id="@+id/edit_ndc_height"
            style="@style/EditTextForm"
            android:hint="@string/height"
            android:maxLength="3"/>

        <EditText
            android:theme="@style/EditTextForm"
            android:id="@+id/edit_ndc_age"
            style="@style/EditTextForm"
            android:hint="@string/age"
            android:maxLength="2" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_ndc_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />

    </LinearLayout>
</ScrollView>